# pgrubic-playground

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint  LICENSE  README.md  data.json  docker-compose.yaml  render.yaml
.github/: dependabot.yml  labeler.yml
.github/workflows/: backend-ci.yml  backend-coverage.yml  ci.yml  frontend-ci.yml  frontend-coverage.yml
backend/: .env  .env.local  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/.choreo/: component.yaml
backend/app/: __init__.py  config.py  infrastructure.py  main.py  models.py
backend/app/api/: routes.py
backend/app/api/routes/: formatter.py  linter.py  utils.py
backend/tests/: conftest.py  test_routes.py
frontend/: .env.local  .prettierignore  .prettierrc.json  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js  vitest.setup.js
frontend/config/: nginx.conf
frontend/config/nginx/: default.conf.template
frontend/css/: monaco-overrides.css  styles.css
frontend/js/: config-editor.js  main.js  toml-parser.js
frontend/public/: config.js
frontend/src/: config-editor.js  config.js  core.js  editors.js  main.js  utils.js
frontend/tests/: core.test.js  editors.test.js  main.test.js  utils.js  utils.test.js
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_5f5a17c013354698_config_py.html  z_5f5a17c013354698_infrastructure_py.html  z_5f5a17c013354698_main_py.html  z_5f5a17c013354698_models_py.html  z_cfb6adc3f81c8e3c_routes_py.html
